--- a/ui/import_wandsworth_dialog_base.ui
+++ b/ui/import_wandsworth_dialog_base.ui
@@ -29,35 +29,32 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>30</y>
      <width>361</width>
-     <height>100</height>
+     <height>106</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Import Polygon layer:</string>
+       <string>Import layer:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QgsMapLayerComboBox" name="importPolygonLayer"/>
+     <widget class="QgsMapLayerComboBox" name="importLayer"/>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Output (Supply) layer:</string>
+       <string>Output layer name:</string>
       </property>
      </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QgsMapLayerComboBox" name="outputLayer"/>
     </item>
     <item row="1" column="1">
      <widget class="QgsMapLayerComboBox" name="snapLayer"/>
@@ -78,6 +75,9 @@
     </item>
     <item row="3" column="1">
      <widget class="QLineEdit" name="fld_Tolerance"/>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="outputLayerName"/>
     </item>
    </layout>
   </widget>
